--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MaterialDesign</string>
+    <string name="max_lenght">15</string>
+    <string name="fragment_main_width">0dp</string>
+    <string name="helper_text_text_input_layout">input query</string>
 </resources>
