--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="title_navigation_four">На экран AnimationsActivity</string>
     <string name="title_navigation_five">На экран RecyclerActivity</string>
     <string name="title_navigation_six">На экран Scale Animations</string>
+    <string name="text_ACB_path">click me</string>
 
 
 </resources>
