ДЗ№5 5) случайная сортировка объектов через setTransitionName путем присвоения id.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="title_navigation_five">На экран RecyclerActivity</string>
     <string name="title_navigation_six">На экран Scale Animations</string>
     <string name="text_ACB_path">click me</string>
+    <string name="title_navigation_seven">На экран Animations Resort</string>
 
 
 </resources>
