ДЗ№6 Создали заготовку для работы с Recycler.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,10 @@
     <string name="bonus_description">На этом, случайно запечатлённом кадре, мама Кошка и её котенок на прогулке в солнечный летний денёк.</string>
     <string name="show_description_bonus">Показать описание</string>
     <string name="cats_photo_date">11 июня 2022</string>
+    <string name="recycler">recycler</string>
+    <string name="recycler_earth_description">Описание планеты Земля</string>
+    <string name="recycler_mars_description">Описание планеты Марс</string>
+
 
 
 </resources>
