ДЗ№8 6) создан прототип простого Tutorial через внешнюю бибилиотеку.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,6 +68,7 @@
     <string name="fragment_ux_button">button</string>
     <string name="good">Правильно:</string>
     <string name="notgood">Неправильно</string>
+    <string name="fragment_ux_tutorial">tutorial</string>
 
 
 </resources>
